--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -3,6 +3,7 @@ $sidebar_width: 300px;
 $color_primary: #2c3e50;
 $color_secondary: #34495e;
 $color_link: #3498db;
+$font-color: #ECF0F1;
 $anim-time: 0.5s;
 
 $meta_width: 280px;
