--- a/client/views/sidebar/sidebar.html
+++ b/client/views/sidebar/sidebar.html
@@ -1,6 +1,24 @@
 <template name="sidebar">
 	<div id="theSidebar" class="sidebar">
-				<button class="close-button fa fa-fw fa-close"></button>
-				<h1><span>Animated</span> Grid Layout</h1>
-			</div>
+		<button class="close-button fa fa-fw fa-close"></button>
+		<h1>
+			<span>ProgLink</span>
+		</h1>
+		<h3>Programmer in Action</h3>
+		<div>Tag Goes here</div>
+		<ul class="tags blue">
+			<li>
+				<a href="#">Interface <span>4</span></a>
+			</li>
+			<li>
+				<a href="#">Icon <span>999</span></a>
+			</li>
+			<li>
+				<a href="#">Typography <span>999</span></a>
+			</li>
+			<li>
+				<a href="#">Color <span>999</span></a>
+			</li>
+		</ul>
+	</div>
 </template>
