--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -2,7 +2,8 @@ $item_width: 300px;
 $sidebar_width: 300px;
 $color_primary: #2c3e50;
 $color_secondary: #34495e;
-$color_link: #3498db;
+$color_link: #56a3d5;
+// $color_link: #3498db;
 $font-color: #ECF0F1;
 $anim-time: 0.5s;
 
