--- a/client/stylesheets/_mediaqueries.scss
+++ b/client/stylesheets/_mediaqueries.scss
@@ -7,9 +7,9 @@ $viewport_xl: 	$item_width * 5 + $sidebar_width; /* 5 columns */
 $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 
 @media screen and (min-width: $viewport_xs) {
-	html, 
-	body, 
-	.container, 
+	html,
+	body,
+	.container,
 	.main {
 		height: 100vh;
 	}
@@ -85,7 +85,7 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 
 	.grid__item:hover::before,
 	.grid__item:focus::before {
-		border: 3px solid $color_link;
+		box-shadow: 0 0 9px rgba(0, 0, 0, 0.5);
 	}
 
 	.grid__item--loading.grid__item::before {
